--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
   <div class="grid">
 
-    <div class="unit">
-      <img class="img-flex" src="images/Maerten_van_Heemskerck_-_Panorama_with_the_Abduction_of_Helen_Amidst_the_Wonders_of_the_Ancient_World_-_Walters_37656.jpg" alt="">
+    <div class="unit xs-1 s-1 m-1 l-2-3">
+      <img class="img-flex" src="images/maerten-van-heemskerck-panorama-with-the-abduction-of-helen-amidst-the-wonders-of-the-ancient-world-walters-37656.jpg" alt="">
     </div>
 
-    <div class="unit">
+    <div class="unit xs-1 s-1 m-1 l-1-3">
       <h1>The Seven Wonders of the Ancient World</h1>
       <p>Remarkable constructions of classical antiquity almost completely lost in time.</p>
       <p>Come explore the ancient wonders with our amazing teleportation technology that jumps you around the world.</p>
@@ -26,9 +26,13 @@
 
   <div class="grid">
 
-    <div class="unit">
-      <img class="img-flex" src="images/Temple_of_Artemis.jpg" alt="">
-      <h2>Temple of Artemis</h2>
+    <div class="unit xs-1 s-1 m-1-3 l-1-3">
+      <figure>
+        <img class="img-flex" src="images/temple-of-artemis.jpg" alt="">
+        <figcaption>
+          <h2>Temple of Artemis</h2>
+        </figcaption>
+      </figure>
       <dl>
         <dt>Date of construction: </dt>
         <dd>Circa 550 BC</dd>
@@ -39,9 +43,13 @@
       </dl>
     </div>
 
-    <div class="unit">
-      <img class="img-flex" src="images/Colossus_of_Rhodes.jpg" alt="">
-      <h2>Colossus of Rhodes</h2>
+    <div class="unit xs-1 s-1-2 m-1-3 l-1-3">
+      <figure>
+        <img class="img-flex" src="images/colossus-of-rhodes.jpg" alt="">
+        <figcaption>
+          <h2>Colossus of Rhodes</h2>
+        </figcaption>
+      </figure>
       <dl>
         <dt>Date of construction: </dt>
         <dd>292–280 BC</dd>
@@ -52,9 +60,13 @@
       </dl>
     </div>
 
-    <div class="unit">
-      <img class="img-flex" src="images/Hanging_Gardens_of_Babylon.jpg" alt="">
-      <h2>Hanging Gardens of Babylon</h2>
+    <div class="unit xs-1 s-1-2 m-1-3 l-1-3">
+      <figure>
+        <img class="img-flex" src="images/hanging-gardens-of-babylon.jpg" alt="">
+        <figcaption>
+          <h2>Hanging Gardens of Babylon</h2>
+        </figcaption>
+      </figure>
       <dl>
         <dt>Date of construction: </dt>
         <dd>Circa 600 BC</dd>
